--- a/arch/arm/configs/wildfire_defconfig
+++ b/arch/arm/configs/wildfire_defconfig
@@ -168,7 +168,7 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
-CONFIG_SLUB_DEBUG=y
+# CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -186,7 +186,7 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
-CONFIG_HAVE_DMA_API_DEBUG=y
+# CONFIG_HAVE_DMA_API_DEBUG is not set
 CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
 
@@ -496,10 +496,10 @@ CONFIG_MSM_PIL_VENUS=y
 CONFIG_MSM_PIL_PRONTO=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_BUSPM_DEV=m
-CONFIG_MSM_TZ_LOG=y
-CONFIG_MSM_RPM_LOG=y
-CONFIG_MSM_RPM_STATS_LOG=y
-CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
+# CONFIG_MSM_TZ_LOG is not set
+# CONFIG_MSM_RPM_LOG is not set
+# CONFIG_MSM_RPM_STATS_LOG is not set
+# CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
@@ -534,7 +534,7 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
-CONFIG_MSM_OCMEM_DEBUG=y
+# CONFIG_MSM_OCMEM_DEBUG is not set
 # CONFIG_MSM_OCMEM_NONSECURE is not set
 # CONFIG_MSM_OCMEM_POWER_DEBUG is not set
 # CONFIG_MSM_OCMEM_DEBUG_ALWAYS_ON is not set
@@ -558,7 +558,7 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 CONFIG_MSM_CACHE_DUMP=y
 CONFIG_MSM_CACHE_DUMP_ON_PANIC=y
 # CONFIG_MSM_HSIC_SYSMON is not set
-CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
+# CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL is not set
 # CONFIG_USE_DEV_CTRL_VOLUME is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
 CONFIG_FORCE_FAST_CHARGE=y
@@ -569,7 +569,7 @@ CONFIG_MSM_XPU_ERR_FATAL=y
 # CONFIG_MSM_CPR_REGULATOR is not set
 CONFIG_KRAIT_REGULATOR=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
-CONFIG_HTC_POWER_DEBUG=y
+# CONFIG_HTC_POWER_DEBUG is not set
 CONFIG_MACH_M8=y
 CONFIG_PROJECT_NAME=""
 CONFIG_PERFLOCK=y
@@ -920,7 +920,7 @@ CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NETFILTER_NETLINK=y
 # CONFIG_NETFILTER_NETLINK_ACCT is not set
 CONFIG_NETFILTER_NETLINK_QUEUE=y
-CONFIG_NETFILTER_NETLINK_LOG=y
+# CONFIG_NETFILTER_NETLINK_LOG is not set
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_MARK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
@@ -967,9 +967,9 @@ CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
 CONFIG_NETFILTER_XT_TARGET_HL=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 # CONFIG_NETFILTER_XT_TARGET_LED is not set
-CONFIG_NETFILTER_XT_TARGET_LOG=y
+# CONFIG_NETFILTER_XT_TARGET_LOG is not set 
 CONFIG_NETFILTER_XT_TARGET_MARK=y
-CONFIG_NETFILTER_XT_TARGET_NFLOG=y
+# CONFIG_NETFILTER_XT_TARGET_NFLOG is not set
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 CONFIG_NETFILTER_XT_TARGET_NOTRACK=y
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
@@ -1014,7 +1014,7 @@ CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
-CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
+# CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG is not set
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 # CONFIG_NETFILTER_XT_MATCH_REALM is not set
 # CONFIG_NETFILTER_XT_MATCH_RECENT is not set
@@ -2012,7 +2012,7 @@ CONFIG_SLIMBUS_MSM_NGD=y
 #
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
-CONFIG_DEBUG_GPIO=y
+# CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
 
 #
@@ -2054,7 +2054,7 @@ CONFIG_GPIO_MSM_V3=y
 #
 # CONFIG_GPIO_PM8XXX_RPC is not set
 CONFIG_GPIO_QPNP_PIN=y
-CONFIG_GPIO_QPNP_PIN_DEBUG=y
+# CONFIG_GPIO_QPNP_PIN_DEBUG is not set
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
@@ -3159,7 +3159,7 @@ CONFIG_USB_CSW_HACK=y
 CONFIG_MODEM_SUPPORT=y
 CONFIG_RMNET_SMD_CTL_CHANNEL=""
 CONFIG_RMNET_SMD_DATA_CHANNEL=""
-CONFIG_HTC_USB_DEBUG_FLAG=y
+# CONFIG_HTC_USB_DEBUG_FLAG is not set
 
 #
 # OTG and related infrastructure
@@ -3393,7 +3393,7 @@ CONFIG_ZSMALLOC=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOGGER=y
+# CONFIG_ANDROID_LOGGER is not set
 CONFIG_LOGCAT_SIZE=256
 CONFIG_ANDROID_PERSISTENT_RAM=y
 CONFIG_ANDROID_RAM_CONSOLE=y
@@ -3473,9 +3473,9 @@ CONFIG_MOBICORE_API=m
 CONFIG_BIF=y
 CONFIG_BIF_QPNP=y
 CONFIG_DIRTY_SYSTEM_DETECTOR=y
-CONFIG_HTC_PROCESS_DEBUG=y
-CONFIG_HTC_DEBUG_SAVE_BOOT_MSG=y
-CONFIG_HTC_DEBUG_REPORT_MEMINFO=y
+# CONFIG_HTC_PROCESS_DEBUG is not set
+# CONFIG_HTC_DEBUG_SAVE_BOOT_MSG is not set
+# CONFIG_HTC_DEBUG_REPORT_MEMINFO is not set
 # CONFIG_HTC_INIT_COREDUMP is not set
 # CONFIG_SENSORS is not set
 
@@ -3622,19 +3622,19 @@ CONFIG_NLS_UTF8=y
 #
 # HTC Debugging Features
 #
-CONFIG_HTC_DEBUG=y
-CONFIG_HTC_DEBUG_WORKQUEUE=y
-CONFIG_HTC_DEBUG_WATCHDOG=y
-CONFIG_HTC_DEBUG_RTB=y
-CONFIG_HTC_DEBUG_SSR=y
-CONFIG_HTC_DEBUG_KP=y
-CONFIG_HTC_DEBUG_CACHE=y
-CONFIG_HTC_DEBUG_VMALLOC_DUMP=y
+# CONFIG_HTC_DEBUG is not set
+# CONFIG_HTC_DEBUG_WORKQUEUE is not set
+# CONFIG_HTC_DEBUG_WATCHDOG is not set
+# CONFIG_HTC_DEBUG_RTB is not set
+# CONFIG_HTC_DEBUG_SSR is not set
+# CONFIG_HTC_DEBUG_KP is not set
+# CONFIG_HTC_DEBUG_CACHE is not set
+# CONFIG_HTC_DEBUG_VMALLOC_DUMP is not set
 # CONFIG_HTC_DEBUG_DSP is not set
-CONFIG_HTC_DEBUG_RAMCONSOLE=y
+# CONFIG_HTC_DEBUG_RAMCONSOLE is not set
 # CONFIG_HTC_DEBUG_BINDER_WRITE is not set
 # CONFIG_HTC_DEBUG_SEND_SIGNAL is not set
-CONFIG_HTC_DEBUG_DYING_PROCS=y
+# CONFIG_HTC_DEBUG_DYING_PROCS is not set
 
 #
 # HTC features
@@ -3645,13 +3645,13 @@ CONFIG_HTC_FEATURES_SSR=y
 CONFIG_HTC_FEATURES_SSR_MODEM_ENABLE=y
 # CONFIG_HTC_FEATURES_SSR_LPASS_ENABLE is not set
 CONFIG_HTC_FEATURES_SSR_WCNSS_ENABLE=y
-CONFIG_HTC_DEBUG_FOOTPRINT=y
+# CONFIG_HTC_DEBUG_FOOTPRINT is not set
 CONFIG_HTC_DEFAULT_ENABLED_FEATURES=y
 CONFIG_ENLARGE_RADIO_BUFFER=y
 CONFIG_HTC_RPM_CMD=y
 # CONFIG_HTC_POWER_HACK is not set
-CONFIG_HTC_DEBUG_RIL_PCN0005_HTC_DUMP_SMSM_LOG=y
-CONFIG_HTC_DEBUG_RIL_PCN0006_HTC_DUMP_BAM_DMUX_LOG=y
+# CONFIG_HTC_DEBUG_RIL_PCN0005_HTC_DUMP_SMSM_LOG is not set
+# CONFIG_HTC_DEBUG_RIL_PCN0006_HTC_DUMP_BAM_DMUX_LOG is not set
 
 #
 # Kernel hacking
@@ -3664,10 +3664,10 @@ CONFIG_FRAME_WARN=1024
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
-CONFIG_DEBUG_KERNEL=y
+# CONFIG_DEBUG_KERNEL is not set
 # CONFIG_DEBUG_SHIRQ is not set
 # CONFIG_LOCKUP_DETECTOR is not set
 # CONFIG_HARDLOCKUP_DETECTOR is not set
@@ -3678,7 +3678,7 @@ CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
-CONFIG_DEBUG_KMEMLEAK=y
+# CONFIG_DEBUG_KMEMLEAK is not set
 CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
 # CONFIG_DEBUG_KMEMLEAK_TEST is not set
 CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
@@ -3691,18 +3691,18 @@ CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
 # CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_LOCK_STAT is not set
-CONFIG_DEBUG_ATOMIC_SLEEP=y
+# CONFIG_DEBUG_ATOMIC_SLEEP is not set 
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
 CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_DEBUG_HIGHMEM is not set
-CONFIG_DEBUG_BUGVERBOSE=y
-CONFIG_DEBUG_INFO=y
+# CONFIG_DEBUG_BUGVERBOSE is not set
+# CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_WRITECOUNT is not set
-CONFIG_DEBUG_MEMORY_INIT=y
+# CONFIG_DEBUG_MEMORY_INIT is not set
 # CONFIG_DEBUG_LIST is not set
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_DEBUG_SG is not set
@@ -3751,7 +3751,7 @@ CONFIG_KPROBE_EVENT=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
@@ -3767,7 +3767,7 @@ CONFIG_ARM_UNWIND=y
 # CONFIG_DEBUG_LL is not set
 # CONFIG_ARM_KPROBES_TEST is not set
 CONFIG_PID_IN_CONTEXTIDR=y
-CONFIG_DEBUG_SET_MODULE_RONX=y
+# CONFIG_DEBUG_SET_MODULE_RONX is not set
 
 #
 # Security options
