Disable printk messages at compile * Reduces the size of the kernel as message strings are not compiled

--- a/arch/arm/configs/wildfire_defconfig
+++ b/arch/arm/configs/wildfire_defconfig
@@ -144,9 +144,9 @@ CONFIG_UID16=y
 CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_ALL is not set
 CONFIG_HOTPLUG=y
-CONFIG_PRINTK=y
-CONFIG_PRINTK_CPU_ID=y
-CONFIG_PRINTK_PID=y
+# CONFIG_PRINTK is not set 
+# CONFIG_PRINTK_CPU_ID is not set
+# CONFIG_PRINTK_PID is not set
 CONFIG_BUG=y
 CONFIG_ELF_CORE=y
 CONFIG_BASE_FULL=y
@@ -3656,7 +3656,7 @@ CONFIG_HTC_RPM_CMD=y
 #
 # Kernel hacking
 #
-CONFIG_PRINTK_TIME=y
+# CONFIG_PRINTK_TIME is not set 
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=6
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
