wildfire_defconfig: Update defconfig

--- a/arch/arm/configs/wildfire_defconfig
+++ b/arch/arm/configs/wildfire_defconfig
@@ -126,7 +126,7 @@ CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 CONFIG_MM_OWNER=y
 # CONFIG_SYSFS_DEPRECATED is not set
-CONFIG_RELAY=y
+# CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
@@ -369,7 +369,7 @@ CONFIG_ARCH_MSM8974=y
 # CONFIG_ARCH_MSMKRYPTON is not set
 # CONFIG_ARCH_MSM8610 is not set
 # CONFIG_ARCH_MSM8226 is not set
-CONFIG_ARCH_MSMSAMARIUM=y
+# CONFIG_ARCH_MSMSAMARIUM is not set 
 CONFIG_MSM_SOC_REV_NONE=y
 # CONFIG_MSM_SOC_REV_A is not set
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
@@ -534,14 +534,10 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
-# CONFIG_MSM_OCMEM_DEBUG is not set
-# CONFIG_MSM_OCMEM_NONSECURE is not set
-# CONFIG_MSM_OCMEM_POWER_DEBUG is not set
-# CONFIG_MSM_OCMEM_DEBUG_ALWAYS_ON is not set
+# CONFIG_MSM_OCMEM_DEBUG is not set 
 # CONFIG_MSM_OCMEM_POWER_DISABLE is not set
 CONFIG_SENSORS_ADSP=y
-CONFIG_MSM_RTB=y
-CONFIG_MSM_RTB_SEPARATE_CPUS=y
+# CONFIG_MSM_RTB is not set 
 # CONFIG_MSM_EBI_ERP is not set
 CONFIG_MSM_CACHE_ERP=y
 CONFIG_MSM_L1_ERR_PANIC=y
@@ -705,7 +701,7 @@ CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
-CONFIG_CC_STACKPROTECTOR=y
+# CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART is not set
 CONFIG_VMWARE_MVP=y
@@ -2535,7 +2531,7 @@ CONFIG_VIDEO_IR_I2C=y
 # CONFIG_VIDEO_THS7303 is not set
 # CONFIG_VIDEO_M52790 is not set
 CONFIG_V4L_USB_DRIVERS=y
-CONFIG_USB_VIDEO_CLASS=y
+# CONFIG_USB_VIDEO_CLASS is not set
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 CONFIG_USB_GSPCA=m
 # CONFIG_USB_M5602 is not set
@@ -2918,13 +2914,13 @@ CONFIG_SND_SOC_QDSP6V2=y
 CONFIG_AUDIO_OCMEM=y
 CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_MSM8974=y
-CONFIG_SND_SOC_APQ8074=y
+# CONFIG_SND_SOC_APQ8074 is not set
 CONFIG_HD_AUDIO=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9320=y
 CONFIG_SND_SOC_MSM_STUB=y
-CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
+# CONFIG_SND_SOC_MSM_HDMI_CODEC_RX is not set
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
@@ -3371,9 +3367,8 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-CONFIG_ZRAM=y
-# CONFIG_ZRAM_DEBUG is not set
-CONFIG_ZSMALLOC=y
+# CONFIG_ZRAM is not set
+# CONFIG_ZSMALLOC is not set 
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
@@ -3625,7 +3620,6 @@ CONFIG_NLS_UTF8=y
 # CONFIG_HTC_DEBUG is not set
 # CONFIG_HTC_DEBUG_WORKQUEUE is not set
 # CONFIG_HTC_DEBUG_WATCHDOG is not set
-# CONFIG_HTC_DEBUG_RTB is not set
 # CONFIG_HTC_DEBUG_SSR is not set
 # CONFIG_HTC_DEBUG_KP is not set
 # CONFIG_HTC_DEBUG_CACHE is not set
@@ -3678,10 +3672,7 @@ CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
-# CONFIG_DEBUG_KMEMLEAK is not set
-CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
-# CONFIG_DEBUG_KMEMLEAK_TEST is not set
-CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
+# CONFIG_DEBUG_KMEMLEAK is not set 
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_RT_MUTEX_TESTER is not set
@@ -3746,7 +3737,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
 # CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
-CONFIG_BLK_DEV_IO_TRACE=y
+# CONFIG_BLK_DEV_IO_TRACE is not set
 CONFIG_KPROBE_EVENT=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
@@ -3810,7 +3801,7 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
-CONFIG_CRYPTO_RNG=m
+CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
@@ -3900,7 +3891,7 @@ CONFIG_CRYPTO_DEFLATE=y
 #
 # Random Number Generation
 #
-CONFIG_CRYPTO_ANSI_CPRNG=m
+CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
